src/objects/Ship_To_Location__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship To Locations</relationshipLabel>
        <relationshipName>Ship_To_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_1__c</fullName>
        <label>Shipping Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_2__c</fullName>
        <label>Shipping Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_3__c</fullName>
        <label>Shipping Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ship To Location</label>
    <nameField>
        <displayFormat>SHIP-{0000000}</displayFormat>
        <label>Ship To Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ship To Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>